--- a/vignettes/biblio.bib
+++ b/vignettes/biblio.bib
@@ -12,3 +12,46 @@
   volume = {566},
   year = {2019}
 }
+
+@Article{griffiths2018detection,
+   Author="Griffiths, J. A.  and Richard, A. C.  and Bach, K.  and Lun, A. T. L.  and Marioni, J. C. ",
+   Title="{{D}etection and removal of barcode swapping in single-cell {R}{N}{A}-seq data}",
+   Journal="Nat Commun",
+   Year="2018",
+   Volume="9",
+   Number="1",
+   Pages="2667",
+   Month="07"
+}
+
+@Article{lun2019emptydrops,
+   Author="Lun, A. T. L.  and Riesenfeld, S.  and Andrews, T.  and Dao, T. P.  and Gomes, T.  and Marioni, J. C. ",
+   Title="{{E}mpty{D}rops: distinguishing cells from empty droplets in droplet-based single-cell {R}{N}{A} sequencing data}",
+   Journal="Genome Biol.",
+   Year="2019",
+   Volume="20",
+   Number="1",
+   Pages="63",
+   Month="03"
+}
+
+@Article{lun2016pooling,
+   Author="Lun, A. T.  and Bach, K.  and Marioni, J. C. ",
+   Title="{{P}ooling across cells to normalize single-cell {R}{N}{A} sequencing data with many zero counts}",
+   Journal="Genome Biol.",
+   Year="2016",
+   Volume="17",
+   Pages="75",
+   Month="Apr"
+}
+
+@Article{haghverdi2018batch,
+   Author="Haghverdi, L.  and Lun, A. T. L.  and Morgan, M. D.  and Marioni, J. C. ",
+   Title="{{B}atch effects in single-cell {R}{N}{A}-sequencing data are corrected by matching mutual nearest neighbors}",
+   Journal="Nat. Biotechnol.",
+   Year="2018",
+   Volume="36",
+   Number="5",
+   Pages="421--427",
+   Month="06"
+}
