Reduce memory pressure when making the atlas data

--- a/inst/scripts/make-atlas-data.Rmd
+++ b/inst/scripts/make-atlas-data.Rmd
@@ -64,6 +64,11 @@ sce <- SingleCellExperiment(list(counts=counts),
 sce
 ```
 
+```{r, include=FALSE}
+rm(counts)
+gc()
+```
+
 We also obtain the size factors and store them in `sce`.
 
 ```{r}
