--- a/inst/scripts/make-tal1-chimera-data.Rmd
+++ b/inst/scripts/make-tal1-chimera-data.Rmd
@@ -94,16 +94,26 @@ reducedDim(sce, "pca.corrected") <- pc
 head(pc[,1:5])
 ```
 
-We save each component of the `SingleCellExperiment` to file for upload to `r Biocpkg("ExperimentHub")`.
+We now save the data, splitting the large `SingleCellExperiment` object into smaller, sample-wise objects.
+We then upload these smaller files to `r Biocpkg("ExperimentHub")`.
+Splitting up the data allows easier access of specific subsets of the data, and also allows use of the data on low-memory machines.
 
 ```{r}
-base.tal1 <- file.path("MouseGastrulationData", "tal1-chimera", "1.0.0")
-dir.create(base.tal1, recursive=TRUE, showWarnings=FALSE)
-saveRDS(counts(sce), file=file.path(base.tal1, "counts-processed-all.rds"))
-saveRDS(rowData(sce), file=file.path(base.tal1, "rowdata.rds"))
-saveRDS(colData(sce), file=file.path(base.tal1, "coldata.rds"))
-saveRDS(sizeFactors(sce), file=file.path(base.tal1, "sizefac.rds"))
-saveRDS(reducedDims(sce), file=file.path(base.tal1, "reduced-dims.rds"))
+base <- file.path("MouseGastrulationData", "tal1-chimera", "1.0.0")
+dir.create(base, recursive=TRUE, showWarnings=FALSE)
+for(samp in unique(sce$sample)){
+    sub <- sce[, sce$sample == samp]
+    saveRDS(counts(sub), 
+        file=paste0(base, "/counts-processed-sample", samp, ".rds"))
+    saveRDS(rowData(sub), 
+        file=paste0(base, "/rowdata-sample", samp, ".rds"))
+    saveRDS(colData(sub), 
+        file=paste0(base, "/coldata-sample", samp, ".rds"))
+    saveRDS(sizeFactors(sub), 
+        file=paste0(base, "/sizefac-sample", samp, ".rds"))
+    saveRDS(reducedDims(sub), 
+        file=paste0(base, "/reduced-dims-sample", samp, ".rds"))
+}
 ```
 
 # Setting up the raw data
