--- a/inst/scripts/make-wt-chimera-data.Rmd
+++ b/inst/scripts/make-wt-chimera-data.Rmd
@@ -143,7 +143,7 @@ collected <- vector("list", length(sample.paths))
 for (i in seq_along(collected)) {
     curmat <- readMM(sample.paths[i])
     colnames(curmat) <- read.table(barcode.paths[i], stringsAsFactors=FALSE)[,1]
-    saveRDS(curmat, file=file.path(base.wt, sprintf("counts-raw-sample%i.rds", i)))
+    saveRDS(curmat, file=file.path(base, sprintf("counts-raw-sample%i.rds", i)))
 }
 ```
 
