--- a/vignettes/MouseGastrulationData.Rmd
+++ b/vignettes/MouseGastrulationData.Rmd
@@ -8,7 +8,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Available datasets}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}    
+  %\VignetteEncoding{UTF-8}
 bibliography: biblio.bib
 ---
 
@@ -30,7 +30,7 @@ Bioconductor packages can be accessed using the `r CRANpkg("BiocManager")` packa
 
 ```{r getPackage, eval=FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE))
-  install.packages("BiocManager")
+    install.packages("BiocManager")
 BiocManager::install("MouseGastrulationData")
 ```
 
@@ -69,7 +69,7 @@ and `cluster_louvain` (from `r CRANpkg("igraph")`), and were annotated and merge
 
 The data accessible via this package is stored in subsets according to the different 10x samples that were generated.
 For the embryo atlas, the exported object `AtlasSampleMetadata` provides metadata information for each of the samples.
-Descriptions of the contents of each column can be accessed using `?AtlasSampleMetadata`
+Descriptions of the contents of each column can be accessed using `?AtlasSampleMetadata`.
 
 ```{r}
 head(AtlasSampleMetadata, n = 3)
@@ -134,7 +134,7 @@ plot(
     pch = 19,
     xaxt = "n", yaxt = "n",
     xlab = "UMAP1", ylab = "UMAP2"
-	)
+)
 ```
 
 ## Raw data access
